# GitRAG

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/gitrag/: cli.py
backend/gitrag/api/: server.py
backend/gitrag/chunking/: ast_chunker.py  text_chunker.py
backend/gitrag/core/: config.py  exceptions.py  logging.py  pipeline.py  types.py
backend/gitrag/embeddings/: base.py  local.py
backend/gitrag/evaluation/: metrics.py
backend/gitrag/flow_tracer/: call_graph.py  deep_tracer.py  narrative.py  orchestrator.py  resolver.py
backend/gitrag/generation/: context.py  llm.py  prompts.py
backend/gitrag/index/: bm25_store.py  graph_store.py  vector_store.py
backend/gitrag/ingest/: filters.py  language.py  loader.py
backend/gitrag/memory/: conversation.py
backend/gitrag/query/: intent.py  multi_hop.py  reformulator.py
backend/gitrag/retrieval/: fusion.py  hybrid.py  reranker.py
backend/gitrag/semgrep_ext/: runner.py  tagger.py
backend/gitrag/semgrep_ext/rules/: security.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  IngestPanel.tsx  StatusBar.tsx
frontend/src/hooks/: useChat.ts  useHealth.ts  useIngest.ts
frontend/src/pages/: Home.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
